style: fix footer padding * style: align desktop footer text center

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,3 @@
 .footer {
-    @include mobileLg {
-        @include marginX(-24);
-    }
-    @include tablet {
-        padding-bottom: 0;
-    }
+    padding: 0;
 }
